Update 매직 스크립트 V5 업데이트 안내.md

--- a/documents/ko-kr/매직 스크립트 V5 업데이트 안내.md
+++ b/documents/ko-kr/매직 스크립트 V5 업데이트 안내.md
@@ -1,4 +1,4 @@
-# 주요 변경사항 (2020. 02. 13. 업데이트)
+# 주요 변경사항 (2020. 02. 13.)
 * 파서 교체
     * 완전히 새로워진 문법/구문
     * 컴파일된 코드 생성
@@ -18,6 +18,22 @@
 * `int` 및 `long`, `float`, `double`, `string` 자료형 추가
 * `= operator` 추가
 * `global` 및 `this` 키워드 추가
+
+# 추가 변경사항 (2020. 03. 01. 최종)
+* 모든 `.oni.script` 에 대해 `UTF-8 (BOM 없음)` 인코딩 적용
+* 모든 `.txt`에 대해 C# 기본 인코딩 적용
+* 이전 명령어들은 `marg` 에 합쳐짐
+* `<< operator` 및 `>> operator` 추가
+* `for` 및 `foreach` 추가
+* `bool` 및 `byte`, `sbyte`, `ushort`, `short` 자료형 추가
+* `marg` 및 `entities`, `entity`, `levels`, `level` **특수 자료형** 추가
+* `tmain` 및 `tcmain`, `tgmain`, `rpmain`, `rbmain` **특수 함수** 지원
+* 배열 개념 추가
+   * `[] operator` 추가
+* `bool[]` 자료형 지원
+* 단항 연산자 `++ operator` 및 `-- operator` 지원
+* 인스턴스의 함수 호출, 필드 액세스 지원
+   * `:: operator` 추가
 
 ### Before
 ```
@@ -134,12 +150,15 @@ x = x + 100
 
 ## 비트 연산자
 `and` 및 `or`, `xor` 명령어들은 이제 `비트 연산자`로 대체됩니다.  
+`<<` 및 `>>` 비트 연산자가 추가되었습니다. (2020. 03. 01)
 
 | 명령어 | 연산자 |
 | :-----: | :------: |
 | AND | '&' |
 | OR | '|' |
 | XOR | '^' |
+| - | '<<' |
+| - | '>>' |
 
 
 
@@ -164,8 +183,19 @@ a + b * 2
 ### 상수
 이제 모든 상수 값은 자료형을 명시해야합니다.  
 
+
+`int`보다 작은 크기의 자료형에도 `int`형식을 사용해야하지만, 범위에 주의하시길 바랍니다.  
+범위보다 크거나 작은 값은 표현되지 않거나 예기치못한 값을 표현할 수도 있습니다.  
+
+`bool` 자료형은 `.true` 또는 `.false`로만 표현됩니다.  
+
 | 표현 | 자료형 | 범위 |
 | :--------: | :-------: | :---- |
+| .true | `bool` | `.true` 또는 `.false` |
+| 100 | `byte` | `0` ~ `255` |
+| 100 | `sbyte` | `-128` ~ `127` |
+| 100 | `ushort` | `0` ~ `65535` |
+| 100 | `short` | `-32768` ~ `32767` |
 | 100 | `int` | `-2147483648` ~ `2147483647` |
 | 100L | `long` | `-9223372036854775808` ~ `9223372036854775807` |
 | 100f | `float` |  `-3.4E+38` ~ `3.4E+38` (epsilon: `3.4E-38`) |
@@ -230,5 +260,107 @@ int func(int a):
   this.a + a
   ret
 ```
+
+
+
+## 인스턴스의 함수 호출이나 필드 액세스
+인스턴스 형식의 개체가 가지고있는 함수를 호출하거나, 선언되어있는 필드에 액세스하여 값을 읽을 수 있습니다.  
+
+### 함수 호출
+`::`연산자 뒤에 `()`가 따라붙으면 함수로 인식합니다.    
+나머지는 일반 함수 호출과 동일합니다.  
+
+```
+void func(marg value):
+   value::minions()
+   ret
+```
+
+### 필드 액세스
+`::`연산자 뒤에 `()`가 따라붙지 않으면 필드 액세스로 인식합니다.  
+
+
+**경고** 아래 예제는 작동하지 않습니다.
+```
+void func(marg value):
+   value::minions
+   ret
+```
+
+
+
+## 반복문
+### for
+`선언` `조건` `지연된 실행` 3가지로 구성되는 반복문입니다.   
+
+예:
+```csharp
+for (int a = 0; a < 4; a++)
+{
+   ...
+}
+```
+
+#### 선언
+여기서 for문에서 사용될 로컬 변수를 선언할 수 있습니다.  
+같은 형식의 변수를 여러개 선언할 수 있습니다.  
+
+```csharp
+for (int a = 0, b = 0, c = 0, ...; ;)
+```
+
+#### 조건
+`if`와 동일합니다.  
+내부적으로도 `if` 파싱을 합니다.  
+
+
+#### 지연된 실행
+`for 본문`보다 늦게 실행되는 곳입니다.  
+
+
+### foreach
+일부 인스턴스 형식은 `foreach`반복을 지원합니다.  
+`label`과 `if`를 사용했을때보다 비효율적인 코드를 만들지만, 높은 가독성을 얻을 수 있습니다.  
+
+
+제공된 API 문서를 참고하여 해당 인스턴스의 `foreach`지원 여부와 반환 형식을 반드시 확인해보시길 바랍니다.  
+
+```csharp
+void func(marg value):
+   foreach (entity a : value::minions())
+   {
+         
+   }
+   ret
+```
+
+
+
+
+
+## 배열
+배열 개념이 추가되었습니다.   
+형식에는 `[]` 접미사를 사용하며, `변수명[<숫자> 또는 <int형 값>]`으로 사용합니다.   
+
+
+```csharp
+int get():
+   1
+   ret
+
+void func(bool[] values):
+   values[0] = .false
+   values[get()] = .false
+   ret
+```
+
+
+
+
+
+## ++, -- 단항 연산자
+각각 `x = x + 1`, `x = x - 1`과 같은 역할을 합니다.  
+실제로 더 효율적인 코드를 생성합니다.  
+
 
 
