Update 매직 스크립트 V5 업데이트 안내.md

--- a/documents/ko-kr/매직 스크립트 V5 업데이트 안내.md
+++ b/documents/ko-kr/매직 스크립트 V5 업데이트 안내.md
@@ -19,7 +19,7 @@
 * `= operator` 추가
 * `global` 및 `this` 키워드 추가
 
-# 추가 변경사항 (2020. 03. 01. 최종)
+# 추가 변경사항 (2020. 03. 01.)
 * 모든 `.oni.script` 에 대해 `UTF-8 (BOM 없음)` 인코딩 적용
 * 모든 `.txt`에 대해 C# 기본 인코딩 적용
 * 이전 명령어들은 `marg` 에 합쳐짐
@@ -34,6 +34,15 @@
 * 단항 연산자 `++ operator` 및 `-- operator` 지원
 * 인스턴스의 함수 호출, 필드 액세스 지원
    * `:: operator` 추가
+   
+   
+# 추가 변경사항 (2020. 03. 01. 최종)
+* `byte`, `sbyte`, `ushort`, `short` **자료형 삭제**
+* `uint`, `ulong` 자료형 추가 지원
+* 인스턴스 `new` 연산자 추가
+   * `vec2` 및 `vec2i`, `vec3`, `vec3i`, `vec4` 구조체 지원
+   * `offset` 구조체 지원
+
 
 ### Before
 ```
@@ -192,12 +201,10 @@ a + b * 2
 | 표현 | 자료형 | 범위 |
 | :--------: | :-------: | :---- |
 | .true | `bool` | `.true` 또는 `.false` |
-| 100 | `byte` | `0` ~ `255` |
-| 100 | `sbyte` | `-128` ~ `127` |
-| 100 | `ushort` | `0` ~ `65535` |
-| 100 | `short` | `-32768` ~ `32767` |
 | 100 | `int` | `-2147483648` ~ `2147483647` |
 | 100L | `long` | `-9223372036854775808` ~ `9223372036854775807` |
+| 100u | `uint` | `0` ~ `4294967295` |
+| 100UL | `ulong` | `0` ~ `18446744073709551615` |
 | 100f | `float` |  `-3.4E+38` ~ `3.4E+38` (epsilon: `3.4E-38`) |
 | 100d | `double` | `-1.79E+308` ~ `1.79E+308` (epsilon: `1.79E-308`) |
 | "100" | `string` | `utf-8` |
@@ -289,6 +296,8 @@ void func(marg value):
 
 
 
+
+
 ## 반복문
 ### for
 `선언` `조건` `지연된 실행` 3가지로 구성되는 반복문입니다.   
@@ -307,19 +316,36 @@ for (int a = 0; a < 4; a++)
 
 ```csharp
 for (int a = 0, b = 0, c = 0, ...; ;)
+{
+}
 ```
 
 #### 조건
 `if`와 동일합니다.  
-내부적으로도 `if` 파싱을 합니다.  
+조건이 `참`이면 계속해서 본문을 실행하고, `거짓`이면 루프를 종료합니다.   
+
+```csharp
+for (; a < 10;)
+{
+}
+```
 
 
 #### 지연된 실행
 `for 본문`보다 늦게 실행되는 곳입니다.  
+보통 증감 연산을 하는 곳으로 사용됩니다.   
+
+```csharp
+for (; ; a++)
+{
+}
+```
 
 
 ### foreach
 일부 인스턴스 형식은 `foreach`반복을 지원합니다.  
+`foreach`의 뜻처럼 요소를 차례대로 하나씩 가져옵니다.  
+
 `label`과 `if`를 사용했을때보다 비효율적인 코드를 만들지만, 높은 가독성을 얻을 수 있습니다.  
 
 
@@ -359,8 +385,90 @@ void func(bool[] values):
 
 
 ## ++, -- 단항 연산자
-각각 `x = x + 1`, `x = x - 1`과 같은 역할을 합니다.  
-실제로 더 효율적인 코드를 생성합니다.  
+각각 `x = x + 1`, `x = x - 1`과 같은 역할을 하지만, 더 효율적인 코드를 생성합니다.   
+단항 연산자들은 단독으로만 사용해야하며, 이 결과값이 다시 스택으로 푸시되지 않으므로 다른 연산자와 함께 사용하면 안됩니다.   
+
+#### 사용 가능
+```csharp
+int func(int x):
+   x++
+   ret
+```
+
+#### 사용 불가능
+```csharp
+int func(int x):
+   x++ ^ 100
+   ret
+```
+
+
+
+
+## 인스턴스 형식
+이번에 새롭게 추가된 개념입니다.   
+
+
+이러한 형식들은 보통 `new` 연산자로 만들 수 있지만, 그렇지 않은 것도 있습니다.   
+(제공된 API 문서를 참고하여주시길 바랍니다)  
+
+
+`vec2`나 `offset`등이 여기에 속합니다.   
+
+
+
+
+### `new` 연산자 
+실행 중 오류가 발생하는 상황을 피하려면, 반드시 공개된 생성자만 호출해야 합니다.   
+(제공된 API 문서를 참고하여주시길 바랍니다)   
+
+```chsarp
+offset func():
+   new offset(10, 10)
+   ret
+```
+
+
+
+
+
+## 특수 자료형
+`marg` 는 대표적인 특수 자료형입니다.  
+또한, `marg`가 만들어 반환해주는 `entities`, `entity`도 특수 자료형입니다.  
+
+
+기존 트리 구조 명령어를 지원하기 위해 추가되었으며, 트리 구조의 특성상 이곳에 속한 모든 자료형이 특수 자료형이 됩니다.  
+(각 특수 자료형마다 사용가능한 함수나 액세스 가능한 필드는 제공된 API 문서를 참고하여주시길 바랍니다)
+
+
+| 이름 | 설명 | 추가사항 |
+| :---: | :---- | :--- |
+| `marg` | 구 명령어들을 지원하기 위한 인스턴스 형식의 자료형입니다. |  |
+| `entities` | 듀플이나 동물(animal) 목록입니다. | `foreach`를 사용할 수 있습니다. |
+| `entity` | 듀플이나 동물의 **단일(single)** 데이터입니다. | |
+| `levels` | 듀플의 스킬 목록입니다. | `foreach`를 사용할 수 있습니다. |
+| `level` | **단일(single)** 스킬 데이터 입니다. | |
+
+
+
+
+
+## 특수 함수
+다음 함수 이름과 시그니처들은 스크립트의 진입점으로 사용됩니다.  
+하나의 파일에 여러개의 진입점을 정의할 수 있습니다.
+
+하나의 파일에 모든 진입점을 정의하면, 모든 스크립트 트리거에 사용할 수 있습니다.  
+
+
+
+| 함수명 | 시그니처 | 호출자 |
+| :---: | :----: | :---: |
+| `tmain` | `void()` | 스크립트 트리거 | 
+| `tcmain` | `bool(bool)` | 스크립트 트리거 제어 |
+| `tgmain` | `bool(bool, bool)` | 스크립트 트리거 게이트 |
+| `rpmain` | `void(bool[], bool[])` | 스크립트 리본 입력기 패널 |
+| `rbmain` | `void(bool[], bool[], bool[], bool)` | 스크립트 리본 비트 계산기 |
+
 
 
 
