Update 매직 스크립트 V5 업데이트 안내.md

--- a/documents/ko-kr/매직 스크립트 V5 업데이트 안내.md
+++ b/documents/ko-kr/매직 스크립트 V5 업데이트 안내.md
@@ -138,11 +138,11 @@ if (10 == 20)
 
 | 명령어 | 연산자 |
 | :-----: | :------: |
-| add | '+' |
-| sub | '-' |
-| mul | '*' |
-| div | '/' |
-| mod | '%' |
+| add | `+` |
+| sub | `-` |
+| mul | `*` |
+| div | `/` |
+| mod | `%` |
 
 #### Before
 ```
@@ -163,11 +163,11 @@ x = x + 100
 
 | 명령어 | 연산자 |
 | :-----: | :------: |
-| AND | '&' |
-| OR | '|' |
-| XOR | '^' |
-| - | '<<' |
-| - | '>>' |
+| AND | `&` |
+| OR | `|` |
+| XOR | `^` |
+| - | `<<` |
+| - | `>>` |
 
 
 
