Update 매직 스크립트 V5 업데이트 안내.md

--- a/documents/ko-kr/매직 스크립트 V5 업데이트 안내.md
+++ b/documents/ko-kr/매직 스크립트 V5 업데이트 안내.md
@@ -44,6 +44,13 @@
    * `offset` 구조체 지원
 
 
+
+# 추가 변경사항 (2020. 03. 03. 최종)
+* `.oni.script` 에 대한 지원 삭제, `*.onisr`로 대체됨
+* 모든 `.onisr`에 대해 `UTF-8 (BOM 없음)` 인코딩 적용
+
+
+
 ### Before
 ```
 push 0;
